--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@civ-clone/base-unit-action-unload",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "repository": "git@github.com:civ-clone/base-unit-action-unload.git",
   "keywords": [
     "typescript",
@@ -21,7 +21,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@civ-clone/base-unit-type-naval-transport": "^0.1.0",
-    "@civ-clone/core-unit": "^0.1.0"
+    "@civ-clone/core-unit": "^0.1.0",
+    "@civ-clone/core-unit-transport": "^0.1.0"
   }
 }
